# simConvexDecompose

./: .gitignore  CMakeLists.txt  license.txt  simConvexDecompose.cpp  simConvexDecompose.h  simConvexDecompose.lua  simConvexDecompose.pro  simConvexdecompose.pro  simExtConvexDecompose.cpp  simExtConvexDecompose.h  simExtConvexDecompose.pro  v_repExtConvexDecompose.cpp  v_repExtConvexDecompose.h  v_repExtConvexDecompose.pro
addOns/: Convex decomposer.lua
lua/: simConvexDecompose-ce.lua
sourceCode/: simConvexDecompose.cpp  simConvexDecompose.h
